# python-cli-template

./: Dockerfile  README.md  pyproject.toml  requirements.txt
cli/: __main__.py
cli/commands/: __init__.py  demo.py
cli/common/: logger.py
